--- a/main.html
+++ b/main.html
@@ -42,9 +42,9 @@
 			 <tr>
 				 <td>
 					<ul>
-						<li>Listed item</li>
-						<li>Listed item</li>
-						<li>Listed item</li>
+						<li>List item</li>
+						<li>List item</li>
+						<li>List item</li>
 					</ul>
 				 </td>
 			 </tr>
