--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 		 <td>
              <table border="1" width=100%>
 				 			 <tr>
-				 <th colspan="2">Nested table 1</th>
+				 <th colspan="2">Nested Table 1</th>
 			 </tr>
 			 <tr>
 				 <td>
